<resources>
    <string name="app_name">FHU</string>
    <string name="app_welcome">Welcome to Fictional Historical University</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="term">Term</string>
    <string name="terms">Terms</string>
    <string name="course">Course</string>
    <string name="courses">Courses</string>
    <string name="assessments">Assessments</string>
    <string name="assessment">Assessment</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="note_body">Note Body</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_course">Add Course</string>
    <string name="remove_course">Remove Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="remove_assessment">Remove Assessment</string>
    <string name="add_note">Add Note</string>
    <string name="new_note">New Note</string>
    <string name="remove_note">Remove Note</string>
    <string name="start_notification">Start Date Notification</string>
    <string name="end_notification">End Date Notification</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="course_name">Course Name</string>
    <string name="term_name">Term Name</string>
    <string name="instructor">Instructor</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="view_instructor">View Instructor</string>
    <string name="phone">Instructor Phone</string>
    <string name="email">Instructor Email</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="send">Cancel</string>
    <string name="status">Status</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_email">Send Email</string>
    <string name="channel_description">FHU reminder notifications</string>
    <string name="channel_name">FHU Alerts</string>
    <string name="notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string-array name="status_array">
        <item>PLAN TO TAKE</item>
        <item>IN PROGRESS</item>
        <item>COMPLETED</item>
        <item>DROPPED</item>
    </string-array>
    <string-array name="test_type_array">
        <item>Objective Assessment</item>
        <item>Performance Assessment</item>
    </string-array>
</resources>