<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="4dp"
    tools:context=".Controllers.HomeMenuController"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@color/dark_cyan"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:hint="@string/app_welcome"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/termBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="nextPage"
        android:text="@string/terms" />

    <Button
        android:id="@+id/courseBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="nextPage"
        android:text="@string/courses" />

    <Button
        android:id="@+id/assessmentBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="nextPage"
        android:text="@string/assessments" />

    <Button
        android:id="@+id/notificationBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="nextPage"
        android:text="@string/notifications" />
</LinearLayout>