<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.FocusCourseController"
    android:background="@color/black">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:hint="@string/course_name"
        android:inputType="textPersonName"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="@color/dark_cyan"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/dark_cyan"
        android:hint="@string/start_date"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/dark_cyan"
        android:hint="@string/end_date"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <Spinner
        android:id="@+id/termSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/dark_cyan"
        android:contentDescription="@string/term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDate" />

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/dark_cyan"
        android:contentDescription="@string/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termSpinner" />

    <Spinner
        android:id="@+id/instructorSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/dark_cyan"
        android:contentDescription="@string/instructor"
        app:layout_constraintEnd_toStartOf="@+id/instructorBTN"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusSpinner" />

    <Spinner
        android:id="@+id/attributeSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/dark_cyan"
        android:contentDescription="@string/assessment"
        app:layout_constraintEnd_toStartOf="@+id/removeAttributeBTN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructorBTN" />

    <ImageButton
        android:id="@+id/addAttributeBTN"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/add_assessment"
        android:onClick="addAssessment"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/attributeSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructorBTN" />

    <ImageButton
        android:id="@+id/removeAttributeBTN"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/remove_assessment"
        android:onClick="removeAssessment"
        android:src="@drawable/ic_remove"
        app:layout_constraintBottom_toBottomOf="@+id/attributeSpinner"
        app:layout_constraintEnd_toStartOf="@+id/addAttributeBTN"
        app:layout_constraintTop_toBottomOf="@+id/instructorBTN" />

    <ImageButton
        android:id="@+id/instructorBTN"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/view_instructor"
        android:onClick="viewInstructor"
        android:src="@drawable/ic_instructor"
        app:layout_constraintBottom_toBottomOf="@+id/instructorSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusSpinner" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attributeRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeAttributeBTN" />

    <ImageButton
        android:id="@+id/notesBTN"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/notes"
        android:onClick="goToNotes"
        android:src="@drawable/ic_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteBTN" />

    <ImageButton
        android:id="@+id/deleteBTN"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/delete"
        android:onClick="deleteCourse"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveBTN" />

    <ImageButton
        android:id="@+id/saveBTN"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/amber"
        android:contentDescription="@string/save"
        android:onClick="saveCourse"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>