<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:background="@color/amber"
        android:contentDescription="@string/back"
        android:onClick="menuSelection"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/black" />

    <TextView
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/home_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_weight="0"
        android:background="@color/amber"
        android:contentDescription="@string/home"
        android:onClick="menuSelection"
        app:srcCompat="@drawable/ic_home"
        app:tint="@color/black" />

</LinearLayout>