<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="4dp"
    tools:context=".Controllers.LoginController"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/dark_cyan"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:hint="@string/app_welcome"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/usernametext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="16sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="#757575"
        android:textSize="16sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="loginClicked"
        android:text="@string/login" />


</LinearLayout>