<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.NotificationController"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp">

    <Spinner
        android:id="@+id/termSpinnerAlert"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@color/dark_cyan"
        android:contentDescription="@string/term"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/termStartBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_notifications"
        android:onClick="setAlarm"
        android:text="@string/start_date"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/termEndBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_notifications"
        android:onClick="setAlarm"
        android:text="@string/end_date"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/courseSpinnerAlert"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/dark_cyan"
        android:contentDescription="@string/course"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/courseStartBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_notifications"
        android:onClick="setAlarm"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/courseEndBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_notifications"
        android:onClick="setAlarm"
        android:text="@string/end_date" />

    <Spinner
        android:id="@+id/assessmentSpinnerAlert"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/dark_cyan"
        android:contentDescription="@string/assessment"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/assessmentStartBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_notifications"
        android:onClick="setAlarm"
        android:text="@string/start_date" />

    <Button
        android:id="@+id/assessmentEndBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_notifications"
        android:onClick="setAlarm"
        android:text="@string/end_date" />
</LinearLayout>